# CGP_Worker_node

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/database/: engine.py
app/models/: models.py
app/routing/: __init__.py  geodata.py  info.py  processing.py
app/services/: __init__.py  geodata.py  handler.py  parser.py  processing.py  uploader.py
app/services/translations/: params.yaml
app/services/translations/enums/: feature-type.yaml  matcher-type.yaml  orthophoto-compression.yaml  radiometric-calibration.yaml  rerun-from.yaml  sfm-algorithm.yaml
project/: config.py  main.py
project/database/: __init__.py  engine.py  tables.py
project/models/: __init__.py  models.py
project/routing/: __init__.py  geodata.py  processing.py  routing.py
project/services/: __init__.py  geodata.py  parser.py  processing.py  uploader.py
project/services/translations/: params.yaml
project/services/translations/enums/: camera-lens.yaml  feature-quality.yaml  merge.yaml  pc-quality.yaml  rerun-from.yaml
