[tool.poetry]
package-mode = false
description = ""
authors = ["KondratevProkhor <prokhor-2000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
aiofiles = "^23.2.1"
pydantic-settings = "^2.3.3"
geopandas = "^0.14.4"
shapely = "^2.0.4"
geoalchemy2 = "^0.15.1"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
pyodm = "^1.5.11"
psutil = "^6.0.0"
gputil = "^1.4.0"
py-cpuinfo = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
